# narrowfield-sdk

./: LICENSE  README.md  pyproject.toml
docs/: PLUGIN_SPEC.md
src/narrowfield/: __init__.py  spec.py
src/superrecruit/: __init__.py  spec.py
tests/: test_spec.py
