[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superrecruit-sdk"
version = "0.1.0"
description = "Data contracts and plugin interfaces for SuperRecruit integrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jason Prater", email = "jprater@gmail.com" },
]
keywords = ["superrecruit", "plugins", "sdk", "recruiting", "ats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/insomniak68/superrecruit-sdk"
Issues = "https://github.com/insomniak68/superrecruit-sdk/issues"
Documentation = "https://github.com/insomniak68/superrecruit-sdk/blob/main/docs/PLUGIN_SPEC.md"
